feat: update articles

--- a/Kubernetes/安装配置/命令控制.md
+++ b/Kubernetes/安装配置/命令控制.md
@@ -70,6 +70,33 @@ $ kubectl create -f yamls/
 $ kubectl delete -f yamls/
 ```
 
+创建包含两个 POD 的应用:
+
+```sh
+# 创建 Deployment
+$ kubectl run hello-world --replicas=2 --labels="run=load-balancer-example" --image=gcr.io/google-samples/node-hello:1.0  --port=8080
+
+# 获取 Deployment 相关的信息
+$ kubectl get deployments hello-world
+$ kubectl describe deployments hello-world
+
+# 获取关联的 ReplicaSet 对象
+$ kubectl get replicasets
+$ kubectl describe replicasets
+
+# 创建 Service 对象，并且暴露服务
+$ kubectl expose deployment hello-world --type=NodePort --name=example-service
+
+# 获取服务信息
+$ kubectl describe services example-service
+
+# 获取关联的 Pod 信息
+$ kubectl get pods --selector="run=load-balancer-example" --output=wide
+
+# 访问服务
+$ curl http://<public-node-ip>:<node-port>
+```
+
 ## 上下文切换
 
 在 K8s 集群安装完毕之后，可以下载集群的配置文件到本地 kubectl 配置中：
