--- a/Kubernetes/Pod/共享机制.md
+++ b/Kubernetes/Pod/共享机制.md
@@ -8,23 +8,204 @@
 
 # 共享网络
 
-比如说现在有一个 Pod，其中包含了一个容器 A 和一个容器 B，它们两个就要共享 Network Namespace。在 Kubernetes 里的解法是这样的：它会在每个 Pod 里，额外起一个 Infra container 小容器来共享整个 Pod 的 Network Namespace。
+可以通过本地主机访问 Pod 中的容器，它们使用相同的网络名称空间。 对于容器，可观察的主机名是 Pod 的名称。 由于容器共享相同的 IP 地址和端口空间，因此应在容器中使用不同的端口进行传入连接。 因此，Pod 中的应用程序必须协调其端口使用情况。
 
-Infra container 是一个非常小的镜像，大概 100~200KB 左右，是一个汇编语言写的、永远处于“暂停”状态的容器。由于有了这样一个 Infra container 之后，其他所有容器都会通过 Join Namespace 的方式加入到 Infra container 的 Network Namespace 中。
+在以下示例中，我们将创建一个多容器 Pod，其中一个容器中的 nginx 充当在第二个容器中运行的简单 Web 应用程序的反向代理。
 
-所以说一个 Pod 里面的所有容器，它们看到的网络视图是完全一样的。即：它们看到的网络设备、IP地址、Mac地址等等，跟网络相关的信息，其实全是一份，这一份都来自于 Pod 第一次创建的这个 Infra container。这就是 Pod 解决网络共享的一个解法。
+![共享网络](https://linchpiner.github.io/images/k8s-mc-3.svg)
 
-在 Pod 里面，一定有一个 IP 地址，是这个 Pod 的 Network Namespace 对应的地址，也是这个 Infra container 的 IP 地址。所以大家看到的都是一份，而其他所有网络资源，都是一个 Pod 一份，并且被 Pod 中的所有容器共享。这就是 Pod 的网络实现方式。
+我们使用 nginx 配置文件创建 ConfigMap。 到端口 80 的传入 HTTP 请求将转发到本地主机上的端口 5000：
+
+```yml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: mc3-nginx-conf
+data:
+  nginx.conf: |-
+    user  nginx;
+    worker_processes  1;
+
+    error_log  /var/log/nginx/error.log warn;
+    pid        /var/run/nginx.pid;
+
+    events {
+        worker_connections  1024;
+    }
+
+    http {
+        include       /etc/nginx/mime.types;
+        default_type  application/octet-stream;
+
+        log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                          '$status $body_bytes_sent "$http_referer" '
+                          '"$http_user_agent" "$http_x_forwarded_for"';
+
+        access_log  /var/log/nginx/access.log  main;
+
+        sendfile        on;
+        keepalive_timeout  65;
+
+        upstream webapp {
+            server 127.0.0.1:5000;
+        }
+
+        server {
+            listen 80;
+
+            location / {
+                proxy_pass         http://webapp;
+                proxy_redirect     off;
+            }
+        }
+    }
+```
+
+使用简单的 Web 应用程序和 Nginx 在单独的容器中创建一个多容器 Pod。请注意，对于 Pod，我们仅定义了 nginx 端口 80，在 Pod 外部将无法访问端口 5000。
+
+```yml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: mc3
+  labels:
+    app: mc3
+spec:
+  containers:
+    - name: webapp
+      image: training/webapp
+    - name: nginx
+      image: nginx:alpine
+      ports:
+        - containerPort: 80
+      volumeMounts:
+        - name: nginx-proxy-config
+          mountPath: /etc/nginx/nginx.conf
+          subPath: nginx.conf
+  volumes:
+    - name: nginx-proxy-config
+      configMap:
+        name: mc3-nginx-conf
+```
+
+然后通过 NodePort 服务暴露端口：
+
+```sh
+$ kubectl expose pod mc3 --type=NodePort --port=80
+service "mc3" exposed
+
+$ kubectl describe service mc3
+...
+NodePort:		<unset>	31418/TCP
+...
+```
+
+## Infra
+
+比如说现在有一个 Pod，其中包含了一个容器 A 和一个容器 B，它们两个就要共享 Network Namespace。在 Kubernetes 里的解法是这样的：它会在每个 Pod 里，额外起一个 Infra container 小容器来共享整个 Pod 的 Network Namespace。Infra container 是一个非常小的镜像，大概 100~200KB 左右，是一个汇编语言写的、永远处于“暂停”状态的容器。由于有了这样一个 Infra container 之后，其他所有容器都会通过 Join Namespace 的方式加入到 Infra container 的 Network Namespace 中。
+
+所以说一个 Pod 里面的所有容器，它们看到的网络视图是完全一样的。即：它们看到的网络设备、IP 地址、Mac 地址等等，跟网络相关的信息，其实全是一份，这一份都来自于 Pod 第一次创建的这个 Infra container。这就是 Pod 解决网络共享的一个解法。在 Pod 里面，一定有一个 IP 地址，是这个 Pod 的 Network Namespace 对应的地址，也是这个 Infra container 的 IP 地址。所以大家看到的都是一份，而其他所有网络资源，都是一个 Pod 一份，并且被 Pod 中的所有容器共享。这就是 Pod 的网络实现方式。
 
 由于需要有一个相当于说中间的容器存在，所以整个 Pod 里面，必然是 Infra container 第一个启动。并且整个 Pod 的生命周期是等同于 Infra container 的生命周期的，与容器 A 和 B 是无关的。这也是为什么在 Kubernetes 里面，它是允许去单独更新 Pod 里的某一个镜像的，即：做这个操作，整个 Pod 不会重建，也不会重启，这是非常重要的一个设计。
 
 # 共享存储
 
-比如说现在有两个容器，一个是 Nginx，另外一个是非常普通的容器，在 Nginx 里放一些文件，让我能通过 Nginx 访问到。所以它需要去 share 这个目录。我 share 文件或者是 share 目录在 Pod 里面是非常简单的，实际上就是把 volume 变成了 Pod level。然后所有容器，就是所有同属于一个 Pod 的容器，他们共享所有的 volume。
+在 Kubernetes 中，您可以使用共享的 Kubernetes 卷作为在 Pod 中的容器之间共享数据的简单有效的方法。 在大多数情况下，使用主机上与 Pod 中所有容器共享的目录就足够了。 Kubernetes Volumes 使数据能够在容器重启后幸存下来。 它的寿命与 Pod 相同。 这意味着只要 Pod 存在，它就一直存在。 如果出于任何原因删除了该 Pod，即使创建了相同的替换，共享卷也将被破坏并重新创建。
 
-比如说上图的例子，这个 volume 叫做 shared-data，它是属于 Pod level 的，所以在每一个容器里可以直接声明：要挂载 shared-data 这个 volume，只要你声明了你挂载这个 volume，你在容器里去看这个目录，实际上大家看到的就是同一份。这个就是 Kubernetes 通过 Pod 来给容器共享存储的一个做法。
+具有共享卷的多容器 Pod 的标准用例是：一个容器写入共享目录（日志或其他文件），而另一个容器从共享目录读取。例：
 
-所以在之前的例子中，应用容器 App 写了日志，只要这个日志是写在一个 volume 中，只要声明挂载了同样的 volume，这个 volume 就可以立刻被另外一个 LogCollector 容器给看到。
+```yml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: mc1
+spec:
+  volumes:
+    - name: html
+      emptyDir: {}
+  containers:
+    - name: 1st
+      image: nginx
+      volumeMounts:
+        - name: html
+          mountPath: /usr/share/nginx/html
+    - name: 2nd
+      image: debian
+      volumeMounts:
+        - name: html
+          mountPath: /html
+      command: ["/bin/sh", "-c"]
+      args:
+        - while true; do
+          date >> /html/index.html;
+          sleep 1;
+          done
+```
 
+在此示例中，我们定义了一个名为 html 的卷，其类型为 emptyDir：该卷是在将 Pod 分配给节点时首次创建的，并且只要该 Pod 在该节点上运行就存在。 顾名思义，它最初是空的。 第一个容器运行 nginx 服务器，并将共享卷安装到目录 `/usr/share/nginx/html`。第二个容器使用 Debian 映像，并将共享卷安装到目录/ html。 第二个容器每秒将当前日期和时间添加到共享卷中的 index.html 中。 Nginx 服务器读取此文件，并将其发送到 Web 服务器的每个 HTTP 请求给用户。
 
+![共享存储](https://linchpiner.github.io/images/k8s-mc-1.svg)
 
+您可以通过暴露 Nginx 端口并使用浏览器访问 Pod 来检查 Pod 是否正常工作。 直接在容器中检查共享目录的另一种方法：
+
+```sh
+$ kubectl exec mc1 -c 1st -- /bin/cat /usr/share/nginx/html/index.html
+...
+Fri Aug 25 18:36:06 UTC 2017
+
+$ kubectl exec mc1 -c 2nd -- /bin/cat /html/index.html
+...
+Fri Aug 25 18:36:06 UTC 2017
+Fri Aug 25 18:36:07 UTC 2017
+```
+
+# IPC
+
+Pod 中的容器共享相同的 IPC 名称空间，它们还可以使用标准的进程间通信（例如 SystemV 信号量或 POSIX 共享内存）相互通信。在下面的示例中，我们定义了具有两个容器的 Pod。 我们两者都使用相同的 Docker 映像。第一个容器（生产者）创建一个标准的 Linux 消息队列，写入许多随机消息，然后写入特殊的退出消息。 第二个容器（消费者）打开相同的消息队列进行读取，并读取消息，直到接收到退出消息为止。 我们还将重启策略设置为“从不”，因此 Pod 在两个容器终止后停止。
+
+```yml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: mc2
+spec:
+  containers:
+    - name: 1st
+      image: allingeek/ch6_ipc
+      command: ["./ipc", "-producer"]
+    - name: 2nd
+      image: allingeek/ch6_ipc
+      command: ["./ipc", "-consumer"]
+  restartPolicy: Never
+```
+
+然后使用 kubectl create 创建 Pod 并查看状态：
+
+```sh
+$ kubectl get pods --show-all -w
+NAME      READY     STATUS              RESTARTS  AGE
+mc2       0/2       Pending             0         0s
+mc2       0/2       ContainerCreating   0         0s
+mc2       0/2       Completed           0         29s
+```
+
+然后我们可以查看通信日志：
+
+```sh
+$ kubectl logs mc2 -c 1st
+...
+Produced: f4
+Produced: 1d
+Produced: 9e
+Produced: 27
+
+$ kubectl logs mc2 -c 2nd
+...
+Consumed: f4
+Consumed: 1d
+Consumed: 9e
+Consumed: 27
+Consumed: done
+```
+
+![IPC](https://linchpiner.github.io/images/k8s-mc-2.svg)
