--- a/Kubernetes/服务/服务定义.md
+++ b/Kubernetes/服务/服务定义.md
@@ -28,6 +28,43 @@ spec:
       targetPort: 80
 ```
 
+这里需要对于 Port 的定义进行简要说明：
+
+- port 表示 Service 暴露在 Cluster IP 上的端口，`<cluster ip>:port` 是提供给集群内部客户访问 Service 的入口。
+
+- nodePort 是 K8s 提供给集群外部客户访问 Service 入口的一种方式（另一种方式是 LoadBalancer），所以，`<nodeIP>:nodePort` 是提供给集群外部客户访问 Service 的入口。
+
+- targetPort 是 Pod 上的端口，从 port 和 nodePort 上到来的数据最终经过 kube-proxy 流入到后端 Pod 的 targetPort 上进入容器。
+
+总的来说，port 和 nodePort 都是 Service 的端口，前者暴露给集群内客户访问服务，后者暴露给集群外客户访问服务。从这两个端口到来的数据都需要经过反向代理 kube-proxy 流入后端 Pod 的 targetPod，从而到达 Pod 上的容器内。默认情况下，targetPort 将被设置为与 port 字段相同的值；targetPort 可以是一个字符串，引用了 backend Pod 的一个端口的名称。但是，实际指派给该端口名称的端口号，在每个 backend Pod 中可能并不相同。对于部署和设计 Service，这种方式会提供更大的灵活性；例如，可以在 backend 软件下一个版本中，修改 Pod 暴露的端口，并不会中断客户端的调用。
+
+# 多端口 Service
+
+很多 Service 需要暴露多个端口。对于这种情况，Kubernetes 支持在 Service 对象中定义多个端口。当使用多个端口时，必须给出所有端口的名称，这样 Endpoint 就不会产生歧义，例如：
+
+```yml
+kind: Service
+apiVersion: v1
+metadata:
+  name: my-service
+spec:
+  selector:
+    app: MyApp
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 9376
+    - name: https
+      protocol: TCP
+      port: 443
+      targetPort: 9377
+```
+
+# 应用选择
+
+Kubernetes Service 能够支持 TCP 和 UDP 协议，默认 TCP 协议，其通过标签来选取服务后端，一般配合 Replication Controller 或者 Deployment 来保证后端容器的正常运行。这一组 Pod 能够被 Service 访问到，通常是通过 Label Selector 实现的。另外，也可以将已有的服务以 Service 的形式加入到 Kubernetes 集群中来，只需要在创建 Service 的时候不指定 Label selector，而是在 Service 创建好后手动为其添加 endpoint。对 Kubernetes 集群中的应用，Kubernetes 提供了简单的 Endpoints API，只要 Service 中的一组 Pod 发生变更，应用程序就会被更新。对非 Kubernetes 集群中的应用，Kubernetes 提供了基于 VIP 的网桥的方式访问 Service，再由 Service 重定向到 backend Pod。
+
 # 其他类型的服务后端
 
 Service 抽象了该如何访问 Kubernetes Pod，但也能够抽象其它类型的 backend，例如：
