feat: update articles

--- a/云计算/Serverless/函数模式.md
+++ b/云计算/Serverless/函数模式.md
@@ -3,8 +3,8 @@
 Serverless 函数是分布式的，我们不知道也无需知道函数是部署或运行在哪台机器上，所以我们需要对每个函数进行单元测试。Serverless 应用是由一组函数组成的，函数内部可能依赖了一些别的后端服务（BaaS），所以我们也需要对 Serverless 应用进行集成测试。运行函数的 FaaS 和 BaaS 在本地也难以模拟。除此之外，不同平台提供的 FaaS 环境可能不一致，不平台提供的 BaaS 服务的 SDK 或接口也可能不一致，这不仅给我们的测试带来了一些问题，也增加了应用迁移成本。根据 Mike Cohn 提出的测试金字塔，单元测试的成本最低，效率最高；UI 测试（集成）测试的成本最高，效率最低，所以我们要尽可能多的进行单元测试，从而减少集成测试。这对 Serverless 的函数测试同样适用。
 
 ```js
-const db = require('db').connect();
-const mailer = require('mailer');
+const db = require("db").connect();
+const mailer = require("mailer");
 
 module.exports.saveUser = (event, context, callback) => {
   const user = {
@@ -58,9 +58,9 @@ module.exports = Users;
 ```
 
 ```js
-const db = require('db').connect();
-const mailer = require('mailer');
-const Users = require('users');
+const db = require("db").connect();
+const mailer = require("mailer");
+const Users = require("users");
 
 let users = new Users(db, mailer);
 
@@ -94,7 +94,7 @@ FaaS 同样针对冷启动进行了优化，当第一次请求（驱动函数执
 ## 执行上下文重用
 
 ```js
-const mysql = require('mysql');
+const mysql = require("mysql");
 
 module.exports.saveUser = (event, context, callback) => {
   // 初始化数据库连接
@@ -103,7 +103,7 @@ module.exports.saveUser = (event, context, callback) => {
   });
   connection.connect();
 
-  connection.query('...');
+  connection.query("...");
 };
 ```
 
@@ -112,7 +112,7 @@ module.exports.saveUser = (event, context, callback) => {
 既然在短时间内，函数的执行上下文可以重复利用，那么我们就可以将数据库连接放在函数之外：
 
 ```js
-const mysql = require('mysql');
+const mysql = require("mysql");
 
 // 初始化数据库连接
 const connection = mysql.createConnection({
@@ -121,7 +121,7 @@ const connection = mysql.createConnection({
 connection.connect();
 
 module.exports.saveUser = (event, context, callback) => {
-  connection.query('...');
+  connection.query("...");
 };
 ```
 
