feat: update articles

--- a/Kubernetes/Helm/Chart/变量与模板.md
+++ b/Kubernetes/Helm/Chart/变量与模板.md
@@ -254,7 +254,7 @@ metadata:
 { { - template "mychart.labels" } }
 ```
 
-没有范围被传入，因此在模板中我们无法访问任何内容.。虽然这很容易解决。我们只需将范围传递给模板：
+没有范围被传入，因此在模板中我们无法访问任何内容。虽然这很容易解决。我们只需将范围传递给模板：
 
 ```yaml
 apiVersion: v1
