--- a/Kubernetes/Helm/Charts/依赖管理.md
+++ b/Kubernetes/Helm/Charts/依赖管理.md
@@ -1,3 +1,50 @@
+# Chart 依赖关系
+
+在 Helm 中，一个 chart 可能依赖于任何数量的其他 chart。这些依赖关系可以通过 requirements.yaml 文件动态链接或引入 charts/ 目录并手动管理。虽然有一些团队需要手动管理依赖关系的优势，但声明依赖关系的首选方法是使用 chart 内部的 requirements.yaml 文件。
+
+## 用 requirements.yaml 来管理依赖关系
+
+requirements.yaml 文件是列出 chart 的依赖关系的简单文件。
+
+```yml
+dependencies:
+  - name: apache
+    version: 1.2.3
+    repository: http://example.com/charts
+  - name: mysql
+    version: 3.2.1
+    repository: http://another.example.com/charts
+```
+
+- 该 name 字段是 chart 的名称。
+- version 字段是 chart 的版本。
+- repository 字段是 chart repo 的完整 URL。请注意，还必须使用 helm repo add 添加该 repo 到本地才能使用。
+
+有了依赖关系文件，你可以通过运行 helm dependency update ，它会使用你的依赖关系文件将所有指定的 chart 下载到你的 charts/ 目录中。
+
+```sh
+$ helm dep up foochart
+Hang tight while we grab the latest from your chart repositories...
+...Successfully got an update from the "local" chart repository
+...Successfully got an update from the "stable" chart repository
+...Successfully got an update from the "example" chart repository
+...Successfully got an update from the "another" chart repository
+Update Complete. Happy Helming!
+Saving 2 charts
+Downloading apache from repo http://example.com/charts
+Downloading mysql from repo http://another.example.com/charts
+```
+
+当 helm dependency update 检索 chart 时，它会将它们作为 chart 存档存储在 charts/ 目录中。因此，对于上面的示例，可以在 chart 目录中看到以下文件：
+
+```s
+charts/
+  apache-1.2.3.tgz
+  mysql-3.2.1.tgz
+```
+
+通过 requirements.yaml 管理 chart 是一种轻松更新 chart 的好方法，还可以在整个团队中共享 requirements 信息。
+
 # 依赖管理
 
 所有使用 helm 部署的应用中如果没有特别指定 chart 的名字都会生成一个随机的 Release name，例如 romping-frog、sexy-newton 等，跟启动 docker 容器时候容器名字的命名规则相同，而真正的资源对象的名字是在 YAML 文件中定义的名字，我们成为 App name，两者连接起来才是资源对象的实际名字：Release name-App name。
