feat: update articles

--- a/Kubernetes/Helm/Charts/依赖管理.md
+++ b/Kubernetes/Helm/Charts/依赖管理.md
@@ -45,6 +45,82 @@ charts/
 
 通过 requirements.yaml 管理 chart 是一种轻松更新 chart 的好方法，还可以在整个团队中共享 requirements 信息。
 
+## requirements.yaml 中的 alias 字段
+
+除上述其他字段外，每个 requirement 条目可能包含可选字段 alias。为依赖的 chart 添加别名会将 chart 放入依赖关系中，并使用别名作为新依赖关系的名称。如果需要使用其他名称访问 chart，可以使用 alias。
+
+```yml
+# parentchart/requirements.yaml
+dependencies:
+  - name: subchart
+    repository: http://localhost:10191
+    version: 0.1.0
+    alias: new-subchart-1
+  - name: subchart
+    repository: http://localhost:10191
+    version: 0.1.0
+    alias: new-subchart-2
+  - name: subchart
+    repository: http://localhost:10191
+    version: 0.1.0
+```
+
+在上面的例子中，我们将得到 parentchart 的 3 个依赖关系：
+
+```s
+subchart
+new-subchart-1
+new-subchart-2
+```
+
+## requirements.yaml 中的 tags 和 condition 字段
+
+除上述其他字段外，每个需求条目可能包含可选字段 tags 和 condition。所有 charts 都会默认加载。如果存在 tags 或 condition 字段，将对它们进行评估并用于控制应用的 chart 的加载。
+
+- Condition: condition 字段包含一个或多个 YAML 路径（用逗号分隔）。如果此路径存在于顶级父级的值中并且解析为布尔值，则将根据该布尔值启用或禁用 chart。只有在列表中找到的第一个有效路径才被评估，如果没有路径存在，那么该条件不起作用。
+
+- Tags: 标签字段是与此 chart 关联的 YAML 标签列表。在顶级父级的值中，可以通过指定标签和布尔值来启用或禁用所有带有标签的 chart。
+
+```yaml
+# parentchart/requirements.yaml
+dependencies:
+  - name: subchart1
+    repository: http://localhost:10191
+    version: 0.1.0
+    condition: subchart1.enabled, global.subchart1.enabled
+    tags:
+      - front-end
+      - subchart1
+
+  - name: subchart2
+    repository: http://localhost:10191
+    version: 0.1.0
+    condition: subchart2.enabled,global.subchart2.enabled
+    tags:
+      - back-end
+      - subchart2
+# parentchart/values.yaml
+
+subchart1:
+  enabled: true
+tags:
+  front-end: false
+  back-end: true
+```
+
+在上面的示例中，所有带有标签的 front-end 的 charts 都将被禁用，但由于 subchart1.enabled 的值在父项值中为 “真”，因此条件将覆盖该 front-end 标签，subchart1 会启用。由于 subchart2 被标记 back-end 和标签的计算结果为 true，subchart2 将被启用。还要注意的是，虽然 subchart2 有一个在 requirements.yaml 中指定的条件，但父项的值中没有对应的路径和值，因此条件无效。
+
+`--set` 参数可使用来更改 tag 和 conditions 值。
+
+```bash
+helm install --set tags.front-end=true --set subchart2.enabled=false
+```
+
+- Conditions (设置 values) 会覆盖 tags 配置。第一个存在的 condition 路径生效，后续该 chart 的 condition 路径将被忽略。
+- 如果 chart 的某 tag 的任一 tag 的值为 true，那么该 tag 的值为 true，并启用这个 chart。
+- Tags 和 conditions 值必须在顶级父级的值中进行设置。
+- `tags:` 值中的关键字必须是顶级关键字。目前不支持全局和嵌套 `tags:` 表格。
+
 # 依赖管理
 
 所有使用 helm 部署的应用中如果没有特别指定 chart 的名字都会生成一个随机的 Release name，例如 romping-frog、sexy-newton 等，跟启动 docker 容器时候容器名字的命名规则相同，而真正的资源对象的名字是在 YAML 文件中定义的名字，我们成为 App name，两者连接起来才是资源对象的实际名字：Release name-App name。
