--- a/Kubernetes/服务与负载/Service/案例：应用访问.md
+++ b/Kubernetes/服务与负载/Service/案例：应用访问.md
@@ -6,7 +6,7 @@
 
 # 基于 DNS 解析访问
 
-# 链接
+# TBD
 
 - https://kubernetes.io/docs/tasks/access-application-cluster/port-forward-access-application-cluster/
 - https://kubernetes.io/docs/tasks/access-application-cluster/service-access-application-cluster/
