feat: update articles

--- a/Kubernetes/网络/Calico/工作原理.md
+++ b/Kubernetes/网络/Calico/工作原理.md
@@ -1,1 +1,32 @@
 # Calico
+
+Calico 采用的 BGP，就是在大规模网络中实现节点路由信息共享的一种协议。全称是 Border Gateway Protocol，即：边界网关协议。它是一个 Linux 内核原生就支持的、专门用在大规模数据中心里维护不同的 “自治系统” 之间路由信息的、无中心的路由协议。
+
+由于没有使用 CNI 的网桥，Calico 的 CNI 插件需要为每个容器设置一个 Veth Pair 设备，然后把其中的一端放置在宿主机上，还需要在宿主机上为每个容器的 Veth Pair 设备配置一条路由规则，用于接收传入的 IP 包。如下图所示：
+
+![Calico](https://s1.ax1x.com/2020/10/19/0xRYbq.png)
+
+可以使用 calicoctl 查看 Node 1 的节点连接情况：
+
+```sh
+~ calicoctl get no
+NAME
+node1
+node2
+node3
+~ calicoctl node status
+Calico process is running.
+
+IPv4 BGP status
++---------------+-------------------+-------+------------+-------------+
+| PEER ADDRESS  |     PEER TYPE     | STATE |   SINCE    |    INFO     |
++---------------+-------------------+-------+------------+-------------+
+| 192.168.50.11 | node-to-node mesh | up    | 2020-09-28 | Established |
+| 192.168.50.12 | node-to-node mesh | up    | 2020-09-28 | Established |
++---------------+-------------------+-------+------------+-------------+
+
+IPv6 BGP status
+No IPv6 peers found.
+```
+
+可以看到整个 calico 集群上有 3 个节点，Node 1 和另外两个节点处于连接状态，模式为 “Node-to-Node Mesh”。再看下 Node 1 上的路由信息如下：
