feat: update articles

--- a/Kubernetes/服务与负载/Service/服务定义.md
+++ b/Kubernetes/服务与负载/Service/服务定义.md
@@ -36,9 +36,9 @@ spec:
 
 - targetPort 是 Pod 上的端口，从 port 和 nodePort 上到来的数据最终经过 kube-proxy 流入到后端 Pod 的 targetPort 上进入容器。
 
-总的来说，port 和 nodePort 都是 Service 的端口，前者暴露给集群内客户访问服务，后者暴露给集群外客户访问服务。从这两个端口到来的数据都需要经过反向代理 kube-proxy 流入后端 Pod 的 targetPod，从而到达 Pod 上的容器内。默认情况下，targetPort 将被设置为与 port 字段相同的值；targetPort 可以是一个字符串，引用了 backend Pod 的一个端口的名称。但是，实际指派给该端口名称的端口号，在每个 backend Pod 中可能并不相同。对于部署和设计 Service，这种方式会提供更大的灵活性；例如，可以在 backend 软件下一个版本中，修改 Pod 暴露的端口，并不会中断客户端的调用。
+总的来说，port 和 nodePort 都是 Service 的端口，前者暴露给集群内客户访问服务，后者暴露给集群外客户访问服务。从这两个端口到来的数据都需要经过反向代理 kube-proxy 流入后端 Pod 的 targetPod，从而到达 Pod 上的容器内。默认情况下，targetPort 将被设置为与 port 字段相同的值；targetPort 可以是一个字符串，引用了后端 Pod 的一个端口的名称。但是，实际指派给该端口名称的端口号，在每个后端 Pod 中可能并不相同。对于部署和设计 Service，这种方式会提供更大的灵活性；例如，可以在后端 软件下一个版本中，修改 Pod 暴露的端口，并不会中断客户端的调用。
 
-# 多端口 Service
+## 多端口 Service
 
 很多 Service 需要暴露多个端口。对于这种情况，Kubernetes 支持在 Service 对象中定义多个端口。当使用多个端口时，必须给出所有端口的名称，这样 Endpoint 就不会产生歧义，例如：
 
@@ -61,17 +61,17 @@ spec:
       targetPort: 9377
 ```
 
-# 应用选择
+## 应用选择
 
-Kubernetes Service 能够支持 TCP 和 UDP 协议，默认 TCP 协议，其通过标签来选取服务后端，一般配合 Replication Controller 或者 Deployment 来保证后端容器的正常运行。这一组 Pod 能够被 Service 访问到，通常是通过 Label Selector 实现的。另外，也可以将已有的服务以 Service 的形式加入到 Kubernetes 集群中来，只需要在创建 Service 的时候不指定 Label selector，而是在 Service 创建好后手动为其添加 endpoint。对 Kubernetes 集群中的应用，Kubernetes 提供了简单的 Endpoints API，只要 Service 中的一组 Pod 发生变更，应用程序就会被更新。对非 Kubernetes 集群中的应用，Kubernetes 提供了基于 VIP 的网桥的方式访问 Service，再由 Service 重定向到 backend Pod。
+Kubernetes Service 能够支持 TCP 和 UDP 协议，默认 TCP 协议，其通过标签来选取服务后端，一般配合 Replication Controller 或者 Deployment 来保证后端容器的正常运行。这一组 Pod 能够被 Service 访问到，通常是通过 Label Selector 实现的。另外，也可以将已有的服务以 Service 的形式加入到 Kubernetes 集群中来，只需要在创建 Service 的时候不指定 Label selector，而是在 Service 创建好后手动为其添加 endpoint。对 Kubernetes 集群中的应用，Kubernetes 提供了简单的 Endpoints API，只要 Service 中的一组 Pod 发生变更，应用程序就会被更新。对非 Kubernetes 集群中的应用，Kubernetes 提供了基于 VIP 的网桥的方式访问 Service，再由 Service 重定向到后端 Pod。
 
 # 其他类型的服务后端
 
-Service 抽象了该如何访问 Kubernetes Pod，但也能够抽象其它类型的 backend，例如：
+Service 抽象了该如何访问 Kubernetes Pod，但也能够抽象其它类型的后端，例如：
 
 - 希望在生产环境中使用外部的数据库集群，但测试环境使用自己的数据库。
 - 希望服务指向另一个 Namespace 中或其它集群中的服务。
-- 正在将工作负载转移到 Kubernetes 集群，和运行在 Kubernetes 集群之外的 backend。
+- 正在将工作负载转移到 Kubernetes 集群，和运行在 Kubernetes 集群之外的后端。
 
 在任何这些场景中，都能够定义没有 selector 的 Service：
 
