feat: update articles

--- a/Kubernetes/存储/卷/本地存储.md
+++ b/Kubernetes/存储/卷/本地存储.md
@@ -1,16 +1,105 @@
 # 本地存储
 
-# Local Persistent Volumes
+# Empty-Dir
 
-在 Kubernetes 1.14 版本中，Local Persistent Volumes(以下简称 LPV)已变为正式版本（GA），LPV 的概念在 1.7 中被首次提出（alpha），并在 1.10 版本中升级到 beat 版本。现在用户终于可以在生产环境中使用 LPV 的功能和 API 了。
+每当一个 Pod 被分配到一个现有节点时，就会创建一个 EmptyDir 类型的卷。该卷最初是空的，所有的 Pod 容器都可以向该卷读写文件。这个卷不是一个持久的数据卷。每当 Pod 从节点中移除时，数据 EmptyDiris 就会被永久删除。需要注意的是，在容器失败的情况下，数据不会被删除。让我们创建一个 Pod 来测试这个卷。
 
-Local Persistent Volumes 代表了直接绑定在计算节点上的一块本地磁盘。Kubernetes 提供了一套卷插件（volume plugin）标准，使得 k8s 集群的工作负载可以使用多种块存储和文件存储。大部分磁盘插件都使用了远程存储，这是为了让持久化的数据与计算节点彼此独立，但远程存储通常无法提供本地存储那么强的读写性能。有了 LPV 插件，Kubernetes 负载现在可以用同样的 volume api，在容器中使用本地磁盘。
+```yaml
+vim pod-emptydir.yaml
 
-## 与 hostPath 的区别
+apiVersion : v1
+kind : Pod
+metadata :
+   name : busybox
+  namespace : default
+spec :
+   containers :
+  - image : busybox
+    name : busy
+    command :
+      - sleep
+      - " 3600 "
+     volumeMounts :
+    - mountPath : /giropops
+      name : giropops-dir
+  volumes :
+  - name : giropops-dir
+    emptyDir : {}
+```
 
-hostPath 是一种 Volume，可以让 pod 挂载宿主机上的一个文件或目录（如果挂载路径不存在，则创建为目录或文件并挂载）。
+然后创建卷：
 
-最大的不同在于调度器是否能理解磁盘和 node 的对应关系，一个使用 hostPath 的 pod，当他被重新调度时，很有可能被调度到与原先不同的 node 上，这就导致 pod 内数据丢失了。而使用 LPV 的 pod，总会被调度到同一个 node 上（否则就调度失败）。
+```sh
+$ kubectl create -f pod-emptydir.yaml
+
+pod/busybox created
+
+$ kubectl get pod
+
+NAME                      READY     STATUS    RESTARTS   AGE
+busybox                   1/1       Running   0          12s
+```
+
+让我们列举一下 Pod 里面的容器名称。
+
+```sh
+$ kubectl get pods busybox -n default -o jsonpath='{.spec.containers[*].name}*'
+
+busy
+```
+
+现在让我们在创建的 Pod 中直接在路径/giropops 中添加一个文件。
+
+```sh
+$ kubectl exec -ti busybox -c busy -- touch /giropops/funciona
+
+$ kubectl exec -ti busybox -c busy -- ls -l /giropops/
+
+total 0
+-rw-r--r--    1 root     root             0 Jul  7 17:37 funciona
+```
+
+正如我们所看到的，我们的文件被正确的创建了，我们检查一下这个文件是否在 kubelet 管理的卷上也被创建了。让我们检查一下这个文件是否也是在 kubelet 管理的卷上创建的。为此，我们需要找出 Pod 所在的节点。
+
+```sh
+$ kubectl get pod -o wide
+
+NAME     READY     STATUS    RESTARTS   AGE  IP          NODE
+busybox  1/1       Running   0          1m   10.40.0.6   elliot-02
+
+$ kubectl exec -ti busybox -c busy sh
+$ ls giropops
+
+```
+
+现在让我们走出 Pod，在 elliot-02 节点中寻找我们的卷。要做到这一点，通过 SSH 访问节点，然后执行命令。
+
+```sh
+$find /var/lib/kubelet/pods/ -iname giropops-dir
+
+/var/lib/kubelet/pods/7d33810f-8215-11e8-b889-42010a8a0002/volumes/kubernetes.io~empty-dir/giropops-dir
+
+$ ls /var/lib/kubelet/pods/7d33810f-8215-11e8-b889-42010a8a0002/volumes/kubernetes.io~empty-dir/giropops-dir
+funciona
+```
+
+回到节点 elliot-01，我们要把 Pod 删除，再列出目录。
+
+```sh
+$ kubectl delete -f pod-emptydir.yaml
+
+pod "busybox" deleted
+```
+
+再次访问节点 elliot-02，看看卷是否还存在。
+
+```sh
+$ ls /var/lib/kubelet/pods/7d...kubernetes.io~empty-dir/giropops-dir
+
+No such file or directory
+```
+
+哎呀，我们收到了找不到目录的消息，正是我们所期望的正确吗？因为类型为 EmptyDir 的卷并不能保持数据的持久性。
 
 # TBD
 
