--- a/Kubernetes/存储/ConfigMap/创建与使用.md
+++ b/Kubernetes/存储/ConfigMap/创建与使用.md
@@ -22,6 +22,12 @@ data:
 
 ## 通过 kubectl 命令行方式创建
 
+```sh
+$ kubectl create configmap cores-frutas --from-literal=uva=roxa --from-file=predileta --from-file=frutas/
+
+$ kubectl get configmap
+```
+
 # 使用 ConfigMap
 
 ## 挂载为卷使用
@@ -53,7 +59,7 @@ spec:
         # `name` here must match the name
         # from the volumes section of this pod
         - name: example-configmap-volume
-            mountPath: /etc/config
+          mountPath: /etc/config
 ```
 
 ## 作为环境变量使用
