--- a/02.集群编排/云计算.md
+++ b/02.集群编排/云计算.md
@@ -8,7 +8,7 @@
 
 随着智能手机的出现以及 4G 标准的普及，互联网应用由 PC 端迅速转向更加自由的移动端。移动设备由于携带方便且便于定位，因此在出行、网络购物、支付等方面彻底改变了现代人的生活方式。在技术方面，为了应对更加庞大的集群规模，单纯的分布式系统已经难于驾驭，因此技术圈开启了一个概念爆发的时代——SOA、DevOps、容器、CI/CD、微服务、Service Mesh 等概念层出不穷，而 Docker、Kubernetes、Mesos、SpringCloud、gRPC、Istio 等一系列产品的出现，标志着云时代已真正到来。
 
-![mindmap](https://i.postimg.cc/vZkRcJPb/image.png)
+![mindmap](https://assets.ng-tech.icu/item/20230424144450.png)
 
 2005 年亚马逊发布了 AWS，算是拉开了云计算的序幕。云计算最重要的技术是分布式计算和分布式存储，分布式计算方面，最开始的技术是虚拟化，也就是所谓的“Software defined xxx”，通过对计算 / 存储和网络资源的虚拟化，同时能够给用户任意分配资源。但这里面一开始做的最好的只有文件存储这一块，AWS S3 及类似的对象存储产品给人们带来了云时代的一些实际的体验，但云服务器则还是走回了卖服务器的老路。
 
